Fix overflowing images.

--- a/_assets/stylesheets/styles.sass
+++ b/_assets/stylesheets/styles.sass
@@ -20,6 +20,9 @@
   #post, #tool
     font-size: 1.3em
     line-height: 1.5
+
+    p > img
+      max-width: 100%
       
     ul, ol
       margin-left: 1.35em
